@startuml

title __NHF's Class Diagram__\n

  namespace NHF {
    namespace Buildings {
      class NHF.Buildings.Factories {
      }
    }
  }
  

  namespace NHF {
    namespace Buildings {
      class NHF.Buildings.Factory {
      }
    }
  }
  

  namespace NHF {
    namespace Buildings {
      class NHF.Buildings.Machine {
      }
    }
  }
  

  namespace NHF {
    namespace Buildings {
      class NHF.Buildings.Machines {
      }
    }
  }
  

  namespace NHF {
    namespace GUI {
      class NHF.GUI.ManageFactories {
      }
    }
  }
  

  namespace NHF {
    namespace GUI {
      class NHF.GUI.ManageOrders {
      }
    }
  }
  

  namespace NHF {
    namespace GUI {
      class NHF.GUI.MenuBar {
      }
    }
  }
  

  namespace NHF {
    namespace GUI {
      class NHF.GUI.NewFactory {
      }
    }
  }
  

  namespace NHF {
    namespace GUI {
      class NHF.GUI.NewOrder {
      }
    }
  }
  

  namespace NHF {
    namespace GUI {
      class NHF.GUI.Window {
      }
    }
  }
  

  namespace NHF {
    namespace Items {
      class NHF.Items.ExistingItems {
      }
    }
  }
  

  namespace NHF {
    namespace Items {
      class NHF.Items.Item {
      }
    }
  }
  

  namespace NHF {
    namespace Items {
      class NHF.Items.StorageElement {
      }
    }
  }
  

  namespace NHF {
    class NHF.Main {
    }
  }
  

  namespace NHF {
    namespace Orders {
      class NHF.Orders.CalculateOrder {
      }
    }
  }
  

  namespace NHF {
    namespace Orders {
      class NHF.Orders.ExistingOrders {
      }
    }
  }
  

  namespace NHF {
    namespace Orders {
      class NHF.Orders.Order {
      }
    }
  }
  

  NHF.Buildings.Factory .up.|> java.io.Serializable
  NHF.Buildings.Factory -up-|> NHF.Buildings.Factories
  NHF.Buildings.Machine .up.|> java.io.Serializable
  NHF.Buildings.Machine o-- NHF.Buildings.Factory : location
  NHF.Buildings.Machine o-- NHF.Items.Item : outputProduct
  NHF.GUI.ManageFactories -up-|> javax.swing.JPanel
  NHF.GUI.ManageFactories o-- NHF.Buildings.Factory : currentFactory
  NHF.GUI.ManageOrders -up-|> javax.swing.JPanel
  NHF.GUI.ManageOrders o-- NHF.Orders.Order : currentOrder
  NHF.GUI.MenuBar -up-|> javax.swing.JMenuBar
  NHF.GUI.NewFactory -up-|> javax.swing.JPanel
  NHF.GUI.NewOrder -up-|> javax.swing.JPanel
  NHF.GUI.Window -up-|> javax.swing.JFrame
  NHF.GUI.Window o-- NHF.GUI.MenuBar : menuBar
  NHF.Items.ExistingItems .up.|> java.io.Serializable
  NHF.Items.Item .up.|> java.io.Serializable
  NHF.Items.StorageElement .up.|> java.io.Serializable
  NHF.Items.StorageElement o-- NHF.Items.Item : item
  NHF.Orders.Order .up.|> java.io.Serializable
  NHF.Orders.Order o-- NHF.Buildings.Factory : factory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
